# query-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  LICENSE  Makefile  README.md  docker-compose.yml  rush.toml  rush_config.db  rush_config.db-shm  rush_config.db-wal
.github/workflows/: release.yml
src/: alert_engine.rs  anomaly_engine.rs  ch_writer.rs  clickhouse_config.rs  config.rs  config_db.rs  eval_state.rs  lib.rs  main.rs  metric_firewall.rs  migrations.rs  monitor_engine.rs  object_store_spool.rs  promql.rs  query_builder.rs  retention_enforcer.rs  rollup.rs  saml.rs  siem_engine.rs  slo_engine.rs  spool.rs  stats_engine.rs  usage_accumulator.rs  usage_tracker.rs
src/handlers/: alerts.rs  anomalies.rs  argocd.rs  auth.rs  bubbleup.rs  custom_skills.rs  dashboards.rs  dd_common.rs  dd_logs.rs  dd_metrics.rs  dd_traces.rs  deploys.rs  detection.rs  export.rs  funnels.rs  groups.rs  ingest_buffer.rs  logs.rs  maintenance.rs  metric_firewall.rs  metrics.rs  mod.rs  monitors.rs  otlp.rs  parse_promql.rs  parse_query.rs  query.rs  remote_write.rs  retention.rs  rum.rs  service_links.rs  services.rs  settings.rs  slos.rs  sso.rs  stats.rs  suggest.rs  tenants.rs  traces.rs  usage.rs  (+2 more)
src/models/: alert.rs  anomaly.rs  custom_skills.rs  dashboard.rs  deploy.rs  detection.rs  ingest.rs  log.rs  metrics.rs  mod.rs  monitor.rs  query.rs  rum.rs  service_link.rs  slo.rs  trace.rs
src/promql/: aggregate.rs  binary.rs  compute.rs  eval.rs  mod.rs  scalar.rs  sql.rs  translate.rs  types.rs
