[package]
name = "wide-query-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "wide_query_api"
path = "src/lib.rs"

[[bin]]
name = "wide-query-api"
path = "src/main.rs"

[[bin]]
name = "wide-anomaly-engine"
path = "src/bin/anomaly_engine.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
clickhouse = { version = "0.13", features = ["time", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
rand = "0.9"
lettre = { version = "0.10", features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
promql-parser = "0.7"
regex = "1"
dotenvy = "0.15"
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
