[package]
name = "rush-api"
version = "0.1.24"
edition = "2024"
license-file = "LICENSE"

[lib]
name = "rush_api"
path = "src/lib.rs"

[[bin]]
name = "rush-api"
path = "src/main.rs"

[[bin]]
name = "rush-anomaly-engine"
path = "src/bin/anomaly_engine.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
clickhouse = { version = "0.13", features = ["time", "uuid", "lz4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-logfmt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
jsonwebtoken = "10"
lettre = { version = "0.10", features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
promql-parser = "0.7"
regex = "1"
dotenvy = "0.15"
urlencoding = "2"
toml = "0.8"
prost = "0.13"
snap = "1"
flate2 = "1"
rmp-serde = "1"
zstd = "0.13"
tokio-stream = "0.1"
futures-util = "0.3"
object_store = { version = "=0.12.1", features = ["aws"] }
bytes = "1"
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
base64 = "0.22"
quick-xml = "0.37"
url = "2"
openssl = "0.10"
dashmap = "6"
bincode = "1"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic-messages", "trace", "logs", "metrics"] }
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
